--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="logo">
+            <img src="" alt="">
+            <p>food,llc</p>
+        </div>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </nav>
+    <section>
+        <div class="card">
+            <h1></h1>
+            <p></p>
+        </div>
+        <div class="card">
+            <h1></h1>
+            <p></p>
+        </div>
+        <div class="card">
+            <h1></h1>
+            <p></p>
+        </div>
+    </section>
 </body>
 </html>
