--- a/index.html
+++ b/index.html
@@ -4,32 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assests/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <div class="logo">
-            <img src="" alt="">
+    <nav class="navbar">
+        <div class="navbar__logo">
+            <img src="assests/img/logo.png" alt="LOGO">
             <p>food,llc</p>
         </div>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+        <h1 class="navbar__title">second assumption</h1>
+        <ul class="navbar__menue">
+            <li><a>chichen</a></li>
+            <li><a>beef</a></li>
+            <li><a>sushi</a></li>
         </ul>
     </nav>
-    <section>
-        <div class="card">
-            <h1></h1>
-            <p></p>
+    <section class="foods">
+        <div class="foods__card">
+            <h1>chicken</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, dolores.
+                 Rerum nulla quod sapiente nihil exercitationem, animi possimus
+                  voluptatem vero.
+            </p>
         </div>
-        <div class="card">
-            <h1></h1>
-            <p></p>
+        <div class="foods__card">
+            <h1>beef</h1>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, 
+                recusandae? Doloribus dolorum saepe tenetur dignissimos tempora consequatur 
+                illum optio reiciendis?
+            </p>
         </div>
-        <div class="card">
-            <h1></h1>
-            <p></p>
+        <div class="foods__card">
+            <h1>sushi</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Id alias hic praesentium repellat. Nam asperiores inventore
+                  quo qui laborum? Fuga.
+            </p>
         </div>
     </section>
 </body>
